portfolio made by PHP 7

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             </ul>
         </nav>
     </header>
-
+    <form action="public/index.php" method="get">
+      <input type="submit" value="Go to PHP Page">
+    </form>
     <section id="about">
         <div class="photoCV">
-            <img src="photoCV.jpg" id="photoCV" alt="Nabil Cheikh" width="250" height="250">
+            <img src="public/images/photoCV.jpg" id="photoCV" alt="Nabil Cheikh" width="250" height="250">
         </div>
         <div class="information">
             <h2>A propos de moi</h2>
